--- a/kdxs_support.html
+++ b/kdxs_support.html
@@ -628,45 +628,32 @@
 					font-size: 18px;
 				}
 			}
-			
-			@media all and (max-width: 600px) {
-				.top .top-lf .xiazai {
-					margin-top: 15px;
-					height: 130px;
-				}
-			}
-			
-			@media all and (max-width: 500px) {
-				.top .top-lf .xiazai {
-					margin-top: 15px;
-					height: 120px;
-				}
-			}
-			
-			@media all and (max-width: 400px) {
-				.top .top-lf .xiazai {
-					margin-top: 15px;
-					height: 100px;
-				}
-			}
+
 		</style>
 	</head>
 
 	<body>
 		<div style="padding-left: 10px;padding-right: 10px;">
 			<br />
-			<h3 style="color: red;text-align: center;">快读小说 - 海量古典名著阅读</h3>
+			<h3 style="color: red;text-align: center;">天天快读</h3>
 			<br />
-			<li>专注古典文学，经典小说阅读，为广大读书爱好者提供众多经典读物。</li>
+			<p> 该应用奉行极简主义，目的是给用户最简单的、最原始、最舒适的阅读体验！</p>
+			<br/>
+<li>
+● 最全书库：小说随便看、应有尽有！</li>
 <br />
-			
-<li>四大名著，三十六计，孙子兵法，道德经，唐诗三百首，处处是文化，本本是经典。</li>
+<li>
+● 最快更新：第一时间更，唯快不破！</li>
+<br />
+<li>
+● 远离书荒：热门榜单、远离书荒！</li>
+<br />
+<li>
+● 阅读体验：采用独有排版引擎。</li>
 <br />
 
-<li>千百年间，万口传诵，哺育了一代又一代人，成为我们民族约定俗成的教科书。</li>
-<br />
-
-<li>直观简洁的界面设计，流畅的翻页效果，全局夜间阅读模式，致力于让您获得更好的阅读体验。</li>
+<p>手机必备的中文阅读软件，全网海量小说任你搜，无插件绿色体验。</p>
+<br/>
 
 		</div>
 		<div class="cen">
@@ -685,8 +672,8 @@
 		<div class="bottom">
 			<div class="shengming">
 				<div class="sm-txt">
-					<p>quanbenxiaoshuo8@gmail.com</p>
-					<p>Copyright ©2018 快读小说 版权所有</p>
+					<p>tiantiankxjjb@gmail.com</p>
+					<p>Copyright ©2018 天天快读 版权所有</p>
 				</div>
 			</div>
 		</div>
